# InsertProjectNameHere

./: .travis.yml  CMakeLists.txt  INSTALL.md  configure.ac
auto_tests/: encryptsave_test.c
cmake/: ModulePackage.cmake
other/: bootstrap_node_packets.c  bootstrap_node_packets.h  windows_build_script_toxcore.sh
other/astyle/: format-source
other/bootstrap_daemon/: tox_bootstrap_daemon.c
other/bootstrap_daemon/docker/: Dockerfile
other/bootstrap_daemon/src/: tox-bootstrapd.c
other/docker/: Dockerfile  build_toxcore.sh  get_packages.sh
other/docker/windows/: Dockerfile  build_dependencies.sh  build_toxcore.sh  get_packages.sh
other/travis/: env-windows.sh  installmd-windows-install  installmd-windows-script
prefix/lib/pkgconfig/: libsodium.pc  opus.pc  vpx.pc
toxav/: CMakeLists.txt  toxav.c
toxcore/: CMakeLists.txt  TCP_client.c  TCP_client.h  byte_vector.api.h  byte_vector.c  byte_vector.h  crypto_core.h  tox.api.h  tox.c  tox.h  tox_api.c
toxdns/: CMakeLists.txt
toxencryptsave/: CMakeLists.txt  toxencryptsave.c  toxencryptsave.h
